// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should handle readOnly, disabled: active 1`] = `
<textinput
  props="{
  "isReadOnly": false,
  "className": "",
  "id": null,
  "isDisabled": false,
  "name": null,
  "type": "text",
  "value": "",
  "children": []
}"
>
  <span
    class="pf-v5-c-form-control curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-4"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should handle readOnly, disabled: disabled 1`] = `
<textinput
  props="{
  "isReadOnly": false,
  "className": "",
  "id": null,
  "isDisabled": true,
  "name": null,
  "type": "text",
  "value": "",
  "children": []
}"
>
  <span
    class="pf-v5-c-form-control pf-m-disabled curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-3"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      disabled=""
      id="generatedid-"
      name="generatedid-"
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should handle readOnly, disabled: readOnly 1`] = `
<textinput
  props="{
  "isReadOnly": true,
  "className": "",
  "id": null,
  "isDisabled": false,
  "name": null,
  "type": "text",
  "value": "",
  "children": []
}"
>
  <span
    class="pf-v5-c-form-control pf-m-readonly curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      readonly=""
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should render a basic component: basic component 1`] = `
<textinput
  props="{
  "className": "",
  "id": null,
  "isDisabled": false,
  "isReadOnly": false,
  "name": null,
  "type": "text",
  "value": "",
  "children": []
}"
>
  <span
    class="pf-v5-c-form-control curiosity-text-input "
  >
    <input
      aria-invalid="false"
      data-ouia-component-id="OUIA-Generated-TextInputBase-1"
      data-ouia-component-type="PF5/TextInput"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="text"
      value=""
    />
  </span>
</textinput>
`;

exports[`TextInput Component should return an emulated onChange event: emulated event, change 1`] = `"dolor sit"`;

exports[`TextInput Component should return an emulated onClear event on escape: emulated event, esc 1`] = `
[
  [
    {
      "checked": false,
      "currentTarget": <input
        aria-invalid="false"
        data-ouia-component-id="OUIA-Generated-TextInputBase-6"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        id="test-id"
        name="generatedid-"
        type="text"
        value=""
      />,
      "id": "test-id",
      "keyCode": 27,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        data-ouia-component-id="OUIA-Generated-TextInputBase-6"
        data-ouia-component-type="PF5/TextInput"
        data-ouia-safe="true"
        id="test-id"
        name="generatedid-"
        type="text"
        value=""
      />,
      "value": "",
    },
  ],
]
`;
